# UFiT_TestSuite

./: Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
docker/: list_of_commands.sh  requirements.txt
docs/: Architecture.md  Documentation.md  Journal.md  RoadMap.md  Setup.md
testOutputs/: gcov_coverage.txt  gprofile.txt  gtest_report.html  gtest_report.xml  testHub_results.txt  valgrindMassif.txt  valgrindMemcheck.txt
testOutputs/codeCoverageHTML/: index-sort-f.html  index-sort-l.html  index.html
testOutputs/codeCoverageHTML/UFiT/: Run_UFiT.F90.func-sort-c.html  Run_UFiT.F90.func.html  Run_UFiT.F90.gcov.html  UFiT_Functions_Fortran.F90.func-sort-c.html  UFiT_Functions_Fortran.F90.func.html  UFiT_Functions_Fortran.F90.gcov.html  UFiT_User_Functions.F90.func-sort-c.html  UFiT_User_Functions.F90.func.html  UFiT_User_Functions.F90.gcov.html  index-sort-f.html  index-sort-l.html  index.html
testSuite/: CMakeLists.txt
testSuite/addons/: gprof2dot.py  gtest2html.py  gtestPlotter.py  gtestStackedPlotter.py  massifPlotter.py  memcheckPlotter.py
testSuite/include/: testSuiteHeader.hpp
testSuite/src/: BlackBoxTest.cpp  GreyBoxTest.cpp  RegressionTest.cpp  TestHub.cpp  UnitTest.cpp  testSuiteHeader.cpp
